header and main completed

--- a/index.html
+++ b/index.html
@@ -15,16 +15,104 @@
       <img width="200" src="img/pexels-bill-emrich-230794-1.jpg" alt="">
       <img width="200" src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     </div>
-    <hr>
   </header>
-  <!-- /title & photo -->
 
+  <hr>
+
+  <!-- central content -->
   <main>
 
+    <!-- travel costs -->
+    <section>
+      <h2>Le mie spese</h2>
+      <table>
+
+        <thead>
+          <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+          </tr>          
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120&euro;</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120&euro;</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120&euro;</td>
+          </tr>
+          <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>360&euro;</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <!-- /travel costs -->
+
+    <hr>
+
+    <!-- tourist attractions -->
+    <section>
+      <h2>Cose da fare</h2>
+      <ul>
+        <li>Visitare la Tower of London &cross;</li>
+        <li>Visitare greenwich &#x2713;</li>
+        <li>Ascoltare un artisa di strada a Covent Garden &#x2713;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+      </ul>
+    </section>
+
+    <hr>
+
+    <!-- info -->
+    <section>
+      <h2>Info utili:</h2>
+      <ol>
+        <li>
+          <span>Numeri utili di emergenza</span>
+          <ul>
+            <li><strong>999</strong> - Emergenza</li>
+            <li><strong>101</strong> - Numero polizia</li>
+            <li><strong>111</strong> - Numero assistenza medica</li>
+          </ul>
+        </li>
+        <li>
+          <span>Hotel</span>
+          <ul>
+            <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+            <li><strong>Indirizzo Hotel:</strong> Westminister, London SW1A1AA, Regno Unito</li>
+          </ul>
+        </li>
+        <li>
+          <span>Aereo</span>
+          <ul>
+            <li><strong>Volo di Andara:</strong>Y1234X, ore 9.30 da Milano Malpensa</li>
+            <li><strong>Volo di Ritorno:</strong>Y1236X, ore 18.30 da London Heathrow</li>
+          </ul>
+        </li>
+      </ol>
+    </section>
+
   </main>
+  <!-- /central content -->
 
+  <hr>
+
+ 
   <footer>
-
+   
   </footer>
 
 </body>
