--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <header>
     <h1>Il mio Viaggio a Londra</h1>
     <div >
-      <img width="200" src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-      <img width="200" src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-      <img width="200" src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+      <img width="200" src="img/pexels-bill-emrich-230794-0.jpg" alt="part 1 of photo">
+      <img width="200" src="img/pexels-bill-emrich-230794-1.jpg" alt="part 2 of photo">
+      <img width="200" src="img/pexels-bill-emrich-230794-2.jpg" alt="part 3 of photo">
     </div>
   </header>
 
@@ -110,9 +110,13 @@
 
   <hr>
 
- 
+ <!-- footer with photo -->
   <footer>
-   
+    <h2>Le Foto</h2>
+    <div>
+      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="photo of London 1">
+      <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="photo of London 2">
+    </div>
   </footer>
 
 </body>
